2005-09-03  Jakub Steiner <jimmac@ximian.com>

	* scalable/apps/Makefile.am: this actually goes to hicolor
	* 24x24/apps/evolution.png: updated
	* 32x32/apps/evolution.png: removed

2005-08-26  Jakub Steiner <jimmac@ximian.com>

	* index.theme.in: also make 48x48 filesystems 
	  scalable (as per bug #314346
	
2005-08-22  Rodney Dawes  <dobey@novell.com>

	* NEWS:
	* configure.in: Update for 2.11.92 release

2005-08-15  Jakub Steiner <jimmac@ximian.com>

	* {16x16,24x24,48x48}/apps/image-viewer.png: generic image view
	icon. bug #167087
	
2005-08-15  Jakub Steiner <jimmac@ximian.com>

	* index.theme.in: while it looks crap, I don't have the motivation
	to create all the missing 16x16 and 24x24 versions, so let's bring
	the 48x48 scaled bluriness back. fixes bug #313052

2005-08-15  Jakub Steiner <jimmac@ximian.com>

	* 24x24/apps/postscript-viewer.png: remove adobe logo. fixes bug #313390

2005-08-09  Jakub Steiner <jimmac@ximian.com>

	* */apps/blender.png: unfortunately only the blender foundation is
	free to use the logo.

2005-08-08  Rodney Dawes  <dobey@novell.com>

	* NEWS:
	* configure.in: Update for 2.11.91 release

2005-08-08  Rodney Dawes  <dobey@novell.com>

	* 16x16/mimetypes/Makefile.am:
	* 16x16/mimetypes/gnome-mime-application-x-kde-app-info.png:
	Removed this icon as it used the KDE logo and the mime type does not
	exist in the shared-mime-info database (application/x-desktop is used
	now instead, as both desktops use the menu spec and these files)

	* 24x24/apps/Makefile.am:
	* 24x24/apps/mozilla-icon.png:
	* 24x24/apps/realplayer.png:
	Remove these two icons as they contain trademarked logos

	* 48x48/apps/Makefile.am:
	* 48x48/apps/realplayer.png:
	Remove this icon as it contains a trademarked logo
	
	* 48x48/mimetypes/Makefile.am:
	* 48x48/mimetypes/gnome-mime-application-vnd.rn-realmedia.png:
	* 48x48/mimetypes/gnome-mime-application-x-kde-app-info.png:
	* 48x48/mimetypes/gnome-mime-audio-x-pn-realaudio.png: